src/test/deca/context/valid/decl_var.deca
// Description:
//    Déclare différentes variables, avec ou sans initialisation
//
//
// Historique:
//    cree le 17/01/2022

{
int a;
float b;
boolean c;
string d;
int e = 2;
float f = 2.2;
float g = 2;
boolean h = false;
string i = "Hello";
a = 1;
b = 1.1;
b = 2;
c = true;
d = "Hello";
}